# knet

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CTestConfig.cmake  LICENSE  README.md  README_zh.md  appveyor.yml  knetConfig.cmake.in
.github/workflows/: main.yml
examples/: echo_conn.h  echo_mgr.cpp  echo_mgr.h
examples/client/: CMakeLists.txt  async_client.cpp  cecho_conn.cpp  cecho_conn.h  echo_conn.cpp  echo_conn.h  socket_listener.cpp  socket_listener.h  sync_client.cpp
examples/server/: CMakeLists.txt  async_server.cpp  echo_conn.cpp  echo_conn.h  secho_conn.h  socket_listener.cpp  socket_listener.h  sync_server.cpp
include/: kacceptor.h  kaddress.h  kasync_worker.h  kconn.h  kconn_factory.h  kconnection.h  kconnector.h  klistener.h  knetfwd.h  kpoller.h  ksocket.h  ktconn.h  ktconnection.h  kuserdata.h  kutils.h  kworkable.h  kworker.h
include/knet/: kacceptor.h  kaddress.h  kasync_worker.h  kconn.h  kconn_factory.h  kconnector.h  knetcfg.h.in  knetfwd.h  kuserdata.h  kutils.h  kworker.h
scripts/: gen_vs2015project.bat  gen_vs2017project.bat  memcheck.sh  update_vsproject.bat
src/: CMakeLists.txt  kacceptor.cpp  kaddress.cpp  kasync_worker.cpp  kconn.cpp  kconn_factory.cpp  kconnection.cpp  kconnector.cpp  kflag.h  kinternal.cpp  kinternal.h  klistener.cpp  knetfwd.cpp  kpoller.cpp  kpoller.h  ksocket.cpp  ksocket.h  kspscqueue.h  ktconn.cpp  ktconnection.cpp  kutils.cpp  kworkable.cpp  kworker.cpp
src/acceptor/: kacceptor_unix.cpp  kacceptor_unix.h  kacceptor_win.cpp  kacceptor_win.h
src/impl/: kworker_impl.cpp  kworker_impl.h
src/internal/: kflag.h  kinternal.cpp  kinternal.h  kplatform.h  kpoller.cpp  kpoller.h  ksocket.cpp  ksocket.h  ksocket_utils.cpp  ksocket_utils.h  kspscqueue.h
src/internal/poller/: kpoller_epoll.cpp  kpoller_epoll.h  kpoller_iocp.cpp  kpoller_iocp.h  kpoller_kqueue.cpp  kpoller_kqueue.h
src/internal/socket/: ksockbuf.h  ksocket_unix.cpp  ksocket_unix.h  ksocket_win.cpp  ksocket_win.h
src/poller/: kpoller_epoll.cpp  kpoller_epoll.h  kpoller_iocp.cpp  kpoller_iocp.h  kpoller_kqueue.cpp  kpoller_kqueue.h
src/socket/: ksocket_unix.cpp  ksocket_unix.h  ksocket_win.cpp  ksocket_win.h
test/: CMakeLists.txt  address.cpp  userdata.cpp  utils.cpp
